<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/illustration"
                android:layout_width="261dp"
                android:layout_height="261dp"
                android:src="@drawable/manage"
                app:layout_constraintBottom_toTopOf="@+id/constraint_signup_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".6">

                <TextView
                    android:id="@+id/txt_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/txt_create_new_account"
                    android:textAllCaps="false"
                    android:textColor="@color/mainTextColor"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/txt_desc"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/sign_please_fill_the_input_below_here"
                    android:textAllCaps="false"
                    android:textColor="@color/lightGray"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/view_username"
                    app:layout_constraintTop_toBottomOf="@+id/txt_header" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/sign_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/mainTextColor"
                    app:hintTextColor="@color/mainTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/login_enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/mainTextColor"
                    app:hintTextColor="@color/mainTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_username"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/login_enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/mainTextColor"
                    app:hintTextColor="@color/mainTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_email"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/sign_enter_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/mainTextColor"
                    app:hintTextColor="@color/mainTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_password"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/txt_terms_and_services"
                    android:textColor="@color/darkGray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/view_confirm_password"
                    app:layout_constraintStart_toStartOf="@+id/view_confirm_password"
                    app:layout_constraintTop_toBottomOf="@+id/view_confirm_password"
                    app:layout_constraintVertical_bias="0" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bgt_btn_solid"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/sign_txt_sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/mainBackgroundColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_or"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".9" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_register"
                    app:layout_constraintWidth_percent=".9">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/open_sans_semibold"
                            android:text="@string/sign_already_have_an_account"
                            android:textColor="@color/lightGray"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/open_sans_semibold"
                            android:text="@string/login_txt_login"
                            android:textColor="@color/mainTextColor"
                            android:textSize="14sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>