<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/illustration"
                android:layout_width="261dp"
                android:layout_height="261dp"
                android:src="@drawable/reset"
                app:layout_constraintBottom_toTopOf="@+id/constraint_login_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_reset_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".6">

                <TextView
                    android:id="@+id/txt_trouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/reset_trouble_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/mainTextColor"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/txt_desc"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="@+id/txt_desc"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:gravity="center"
                    android:text="@string/reset_link_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/lightGray"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/view_email"
                    app:layout_constraintStart_toStartOf="@+id/view_email"
                    app:layout_constraintTop_toBottomOf="@+id/txt_trouble"
                    app:layout_constraintWidth_percent=".8" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:hint="@string/login_enter_email"
                    android:inputType="text"
                    android:textColor="@color/mainTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/mainTextColor"
                    app:hintTextColor="@color/mainTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reset_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bgt_btn_solid"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="Send Link"
                    android:textAllCaps="false"
                    android:textColor="@color/onBoardingBtnTextColor"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_email"
                    app:layout_constraintWidth_percent=".9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>